{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 50,
  "lineage": "09f02b54-a2d1-60f4-d05e-b8f237b61969",
  "resources": [
    {
      "module": "module.fargate_user",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699475922534:internet-gateway/igw-0c37b20fe899afe04",
            "id": "igw-0c37b20fe899afe04",
            "owner_id": "699475922534",
            "region": "us-east-1",
            "vpc_id": "vpc-0cfe0e9dc72946a25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.fargate_user.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.fargate_user",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:699475922534:loadbalancer/app/tomcat-lb/4daea6d62d723c1f",
            "arn_suffix": "app/tomcat-lb/4daea6d62d723c1f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tomcat-lb-682592733.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:699475922534:loadbalancer/app/tomcat-lb/4daea6d62d723c1f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tomcat-lb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0bd3efb7d81b0fa2d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05bb3b02510c30d15"
              },
              {
                "subnet_id": "subnet-07db66010badb2f7a"
              }
            ],
            "subnets": [
              "subnet-05bb3b02510c30d15",
              "subnet-07db66010badb2f7a"
            ],
            "vpc_id": "vpc-0cfe0e9dc72946a25",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:699475922534:loadbalancer/app/tomcat-lb/4daea6d62d723c1f"
          },
          "dependencies": [
            "module.fargate_user.aws_security_group.alb_sg",
            "module.fargate_user.aws_subnet.public_a",
            "module.fargate_user.aws_subnet.public_b",
            "module.fargate_user.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.fargate_user",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:699475922534:listener/app/tomcat-lb/4daea6d62d723c1f/55d25f47d8615b12",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:699475922534:targetgroup/tomcat-tg/f9e523654dccb599",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:699475922534:listener/app/tomcat-lb/4daea6d62d723c1f/55d25f47d8615b12",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:699475922534:loadbalancer/app/tomcat-lb/4daea6d62d723c1f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:699475922534:listener/app/tomcat-lb/4daea6d62d723c1f/55d25f47d8615b12"
          },
          "dependencies": [
            "module.fargate_user.aws_lb.app_lb",
            "module.fargate_user.aws_lb_target_group.tg",
            "module.fargate_user.aws_security_group.alb_sg",
            "module.fargate_user.aws_subnet.public_a",
            "module.fargate_user.aws_subnet.public_b",
            "module.fargate_user.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.fargate_user",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:699475922534:targetgroup/tomcat-tg/f9e523654dccb599",
            "arn_suffix": "targetgroup/tomcat-tg/f9e523654dccb599",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:699475922534:targetgroup/tomcat-tg/f9e523654dccb599",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tomcat-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0cfe0e9dc72946a25"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:699475922534:targetgroup/tomcat-tg/f9e523654dccb599"
          },
          "dependencies": [
            "module.fargate_user.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.fargate_user",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699475922534:route-table/rtb-03fa0219ba751771b",
            "id": "rtb-03fa0219ba751771b",
            "owner_id": "699475922534",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c37b20fe899afe04",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cfe0e9dc72946a25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699475922534",
            "id": "rtb-03fa0219ba751771b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.fargate_user.aws_internet_gateway.gw",
            "module.fargate_user.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.fargate_user",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e647427f112ee68",
            "region": "us-east-1",
            "route_table_id": "rtb-03fa0219ba751771b",
            "subnet_id": "subnet-07db66010badb2f7a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.fargate_user.aws_internet_gateway.gw",
            "module.fargate_user.aws_route_table.public",
            "module.fargate_user.aws_subnet.public_a",
            "module.fargate_user.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.fargate_user",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078448cc8839bd271",
            "region": "us-east-1",
            "route_table_id": "rtb-03fa0219ba751771b",
            "subnet_id": "subnet-05bb3b02510c30d15"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.fargate_user.aws_internet_gateway.gw",
            "module.fargate_user.aws_route_table.public",
            "module.fargate_user.aws_subnet.public_b",
            "module.fargate_user.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.fargate_user",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699475922534:security-group/sg-0bd3efb7d81b0fa2d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd3efb7d81b0fa2d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20251104235226633000000001",
            "name_prefix": "terraform-",
            "owner_id": "699475922534",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cfe0e9dc72946a25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699475922534",
            "id": "sg-0bd3efb7d81b0fa2d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.fargate_user.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.fargate_user",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699475922534:subnet/subnet-07db66010badb2f7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07db66010badb2f7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "699475922534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0cfe0e9dc72946a25"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699475922534",
            "id": "subnet-07db66010badb2f7a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.fargate_user.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.fargate_user",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699475922534:subnet/subnet-05bb3b02510c30d15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bb3b02510c30d15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "699475922534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0cfe0e9dc72946a25"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699475922534",
            "id": "subnet-05bb3b02510c30d15",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.fargate_user.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.fargate_user",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699475922534:vpc/vpc-0cfe0e9dc72946a25",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01ddfb04fae2993d4",
            "default_route_table_id": "rtb-06b4cbbbf967900e4",
            "default_security_group_id": "sg-0b407a2c297a235fa",
            "dhcp_options_id": "dopt-0d510665a1a4c0cff",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cfe0e9dc72946a25",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b4cbbbf967900e4",
            "owner_id": "699475922534",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699475922534",
            "id": "vpc-0cfe0e9dc72946a25",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}